--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/**
+* fichero principal: ControlsPlaylist.svelte
+* Estilo para el botón de control de lista
+*/
+.btn-small-control-list {
+    @apply mx-1 my-2 px-3 py-1 text-xs font-medium text-center text-gray-900 bg-white rounded-lg border border-gray-600;
+    @apply dark:bg-zinc-900 dark:text-white dark:border-zinc-700;
+}
