feat: build: Config and change adapter for build app

--- a/src/global.css
+++ b/src/global.css
@@ -14,3 +14,14 @@
 [data-status="error"] [data-type="exclamation"]{
     display: block!important;
 }
+
+/* File: src/components/app/player/partials/PlayerControls.svelte */
+.player-button-base {
+    @apply p-2 mx-2 mt-0 mb-2 rounded-full;
+}
+.player-button-base .icon-base {
+    @apply stroke-current text-slate-900 h-6 w-6;
+}
+.player-button-base .icon-base {
+    @apply dark:text-white;
+}
